Add image types that can be used for image tag

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       />
       <figcaption>My wedding pictures 1</figcaption>
     </figure>
-    PNG, SVG, JPG, GIF
+    Image formats: PNG, SVG, JPG, GIF
 
     <figure>
       <picture>
