--- a/form/index.html
+++ b/form/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <title>Form</title>
   </head>
   <body>
-    <a href="index.html">Main work</a><br /><br />
-    <a href="/form/index.html">Form</a>
+    <h1>This is for form</h1>
   </body>
 </html>
