--- a/specialchars.html
+++ b/specialchars.html
@@ -14,6 +14,7 @@
       <li><a href="/specialchars.html">Special Characters</a></li>
       <li><a href="faq.html">FAQ</a></li>
       <li><a href="blog/page1.html">Page 1</a></li>
+      <li><a href="/registration.html">Register</a></li>
     </ul>
     <h1>Special Character</h1>
     You can find some of them at
