Update all class work

--- a/css.html
+++ b/css.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/css/practice.css" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
   <body>
-    <a href="index.html">Main work</a><br /><br />
-    <a href="/form/index.html">Form</a>
-    <a href="random.html">Random</a>
+    <div class="one">This is yummy</div>
+    <h1>CSS Introduction</h1>
+    <span>SPAN</span>
   </body>
 </html>
